init commit: query external subs backend apis
