# server/controllers/v1/providers.go
@@ -28,7 +28,7 @@ func ClearCacheHandler(c *gin.Context) {
 }
 
 // @Router /api/v1/tv/{id}/providers [get]
-// @Summary Search Stream Providers for TV Shows by ID
+// @Summary Search Stream Providers for TV Show by ID
 // @ID search-providers-tvshow
 // @Tags Providers
 // @Accept json
@@ -38,23 +38,16 @@ func ClearCacheHandler(c *gin.Context) {
 // @Param episode query int true "Episode Number"
 // @Param provider_profile_id query int false "Provider Profile ID"
 // @Param episode_group_id query string false "Episode Group ID"
-// @Success 200 {object} V1SuccessResponse{data=providers.ProviderResponseObject}
+// @Success 200 {object} V1SuccessResponse{data=providers.ProviderStreamsResponseObject}
 // @Failure 400 {object} V1ErrorResponse
 // @Failure 500 {object} V1ErrorResponse
 func SearchProvidersTVHandler(c *gin.Context) {
-	_, sourceID, err := getSourceIDFromParams(c.Param("id"))
+	query, err := getProvidersQueryTV(c)
 	if err != nil {
-		internal.ErrorResponse(c, fmt.Errorf("failed to get source id from params: %w: %w", internal.BadRequestError, err))
+		internal.ErrorResponse(c, fmt.Errorf("failed to get providers query: %w", err))
 		return
 	}
-	imdbID, err := sources.GetTVShowIMDBID(sourceID)
-	if err != nil {
-		internal.ErrorResponse(c, fmt.Errorf("failed to get tv show imdb id: %w", err))
-		return
-	}
-	// cannot find IMDB id
-	// TODO other providers may allow searching for query, but for now through aiostreams, only imdb id search
-	if imdbID == "" {
+	if query == nil {
 		res := map[string]interface{}{
 			"results":    []interface{}{}, // empty array
 			"media_type": database.MediaTypeTVShow,
@@ -63,20 +56,145 @@ func SearchProvidersTVHandler(c *gin.Context) {
 		internal.SuccessResponse(c, res, 200)
 		return
 	}
+	results, err := providers.QueryProvidersStreams(*query)
+	if err != nil {
+		internal.ErrorResponse(c, fmt.Errorf("failed to query providers: %w", err))
+		return
+	}
+	internal.SuccessResponse(c, results, 200)
+}
+
+// @Router /api/v1/movie/{id}/providers [get]
+// @Summary Search Stream Providers for Movie by ID
+// @ID search-providers-movie
+// @Tags Providers
+// @Accept json
+// @Produce json
+// @Param id path string true "Media ID" example(tmdb-1234)
+// @Param provider_profile_id query int false "Provider Profile ID"
+// @Success 200 {object} V1SuccessResponse{data=providers.ProviderStreamsResponseObject}
+// @Failure 400 {object} V1ErrorResponse
+// @Failure 500 {object} V1ErrorResponse
+func SearchProvidersMovieHandler(c *gin.Context) {
+	query, err := getProvidersQueryMovie(c)
+	if err != nil {
+		internal.ErrorResponse(c, fmt.Errorf("failed to get providers query: %w", err))
+		return
+	}
+	if query == nil {
+		res := map[string]interface{}{
+			"results":    []interface{}{}, // empty array
+			"media_type": database.MediaTypeMovie,
+			"message":    "No results found",
+		}
+		internal.SuccessResponse(c, res, 200)
+		return
+	}
+	results, err := providers.QueryProvidersStreams(*query)
+	if err != nil {
+		internal.ErrorResponse(c, fmt.Errorf("failed to query providers: %w", err))
+		return
+	}
+	internal.SuccessResponse(c, results, 200)
+}
+
+// @Router /api/v1/tv/{id}/subtitles [get]
+// @Summary Search Subtitles for TV Show by ID
+// @ID search-subtitles-tvshow
+// @Tags Providers
+// @Accept json
+// @Produce json
+// @Param id path string true "Media ID" example(tmdb-1234)
+// @Param season query int true "Season Number"
+// @Param episode query int true "Episode Number"
+// @Param provider_profile_id query int false "Provider Profile ID"
+// @Param episode_group_id query string false "Episode Group ID"
+// @Success 200 {object} V1SuccessResponse{data=providers.ProviderSubtitlesResponseObject}
+// @Failure 400 {object} V1ErrorResponse
+// @Failure 500 {object} V1ErrorResponse
+func SearchSubtitlesTVHandler(c *gin.Context) {
+	query, err := getProvidersQueryTV(c)
+	if err != nil {
+		internal.ErrorResponse(c, fmt.Errorf("failed to get providers query: %w", err))
+		return
+	}
+	if query == nil {
+		res := map[string]interface{}{
+			"results":    []interface{}{}, // empty array
+			"media_type": database.MediaTypeTVShow,
+			"message":    "No results found",
+		}
+		internal.SuccessResponse(c, res, 200)
+		return
+	}
+	results, err := providers.QueryProvidersSubtitles(*query)
+	if err != nil {
+		internal.ErrorResponse(c, fmt.Errorf("failed to query providers: %w", err))
+		return
+	}
+	internal.SuccessResponse(c, results, 200)
+}
+
+// @Router /api/v1/movie/{id}/subtitles [get]
+// @Summary Search Subtitles for Movies by ID
+// @ID search-subtitles-movie
+// @Tags Providers
+// @Accept json
+// @Produce json
+// @Param id path string true "Media ID" example(tmdb-1234)
+// @Param provider_profile_id query int false "Provider Profile ID"
+// @Success 200 {object} V1SuccessResponse{data=providers.ProviderSubtitlesResponseObject}
+// @Failure 400 {object} V1ErrorResponse
+// @Failure 500 {object} V1ErrorResponse
+func SearchSubtitlesMovieHandler(c *gin.Context) {
+	query, err := getProvidersQueryMovie(c)
+	if err != nil {
+		internal.ErrorResponse(c, fmt.Errorf("failed to get providers query: %w", err))
+		return
+	}
+	if query == nil {
+		res := map[string]interface{}{
+			"results":    []interface{}{}, // empty array
+			"media_type": database.MediaTypeMovie,
+			"message":    "No results found",
+		}
+		internal.SuccessResponse(c, res, 200)
+		return
+	}
+	results, err := providers.QueryProvidersSubtitles(*query)
+	if err != nil {
+		internal.ErrorResponse(c, fmt.Errorf("failed to query providers: %w", err))
+		return
+	}
+	internal.SuccessResponse(c, results, 200)
+}
+
+func getProvidersQueryTV(c *gin.Context) (*providers.ProvidersQueryRequest, error) {
+	_, sourceID, err := getSourceIDFromParams(c.Param("id"))
+	if err != nil {
+		return nil, fmt.Errorf("failed to get source id from params: %w: %w", internal.BadRequestError, err)
+	}
+	// tmdb has imdb ids in the regular response for movies, but not for tv shows
+	imdbID, err := sources.GetTVShowIMDBID(sourceID)
+	if err != nil {
+		return nil, fmt.Errorf("failed to get tv show imdb id: %w", err)
+	}
+	// cannot find IMDB id
+	// TODO other providers may allow searching for query, but for now through aiostreams, only imdb id search
+	if imdbID == "" {
+		return nil, nil
+	}
 	seasonNumber, err := strconv.Atoi(c.Query("season"))
 	if err != nil || c.Query("season") == "" {
-		internal.ErrorResponse(c, fmt.Errorf("failed to get season query param: %w: %w", internal.BadRequestError, err))
-		return
+		return nil, fmt.Errorf("failed to get season query param: %w: %w", internal.BadRequestError, err)
 	}
 	episodeNumber, err := strconv.Atoi(c.Query("episode"))
 	if err != nil || c.Query("episode") == "" {
-		internal.ErrorResponse(c, fmt.Errorf("failed to get episode query param: %w: %w", internal.BadRequestError, err))
-		return
+		return nil, fmt.Errorf("failed to get episode query param: %w: %w", internal.BadRequestError, err)
 	}
 	episode, err := sources.GetEpisodeTMDB(sourceID, seasonNumber, episodeNumber)
 	if err != nil || episode == nil {
-		internal.ErrorResponse(c, fmt.Errorf("failed to get episode from tmdb: %w", err))
-		return
+		return nil, fmt.Errorf("failed to get episode from tmdb: %w", err)
 	}
 	// slightly hacky, revise if we add more types
 	requestType := c.Query("request_type")
@@ -100,42 +218,23 @@ func SearchProvidersTVHandler(c *gin.Context) {
 	if providerQuery != "" {
 		temp, err := strconv.Atoi(c.Query("provider_profile_id"))
 		if err != nil {
-			internal.ErrorResponse(c, fmt.Errorf("invalid provider profile id query param: %w: %w", internal.BadRequestError, err))
-			return
+			return nil, fmt.Errorf("invalid provider profile id query param: %w: %w", internal.BadRequestError, err)
 		}
 		query.ProviderProfileID = &temp
 	} else {
 		query.ProviderProfileID = nil
 	}
-	results, err := providers.QueryProviders(query)
-	if err != nil {
-		internal.ErrorResponse(c, fmt.Errorf("failed to query providers: %w", err))
-		return
-	}
-	internal.SuccessResponse(c, results, 200)
+	return &query, nil
 }
 
-// @Router /api/v1/movie/{id}/providers [get]
-// @Summary Search Stream Providers for Movies
-// @ID search-providers-movie
-// @Tags Providers
-// @Accept json
-// @Produce json
-// @Param id path string true "Media ID" example(tmdb-1234)
-// @Param provider_profile_id query int false "Provider Profile ID"
-// @Success 200 {object} V1SuccessResponse{data=providers.ProviderResponseObject}
-// @Failure 400 {object} V1ErrorResponse
-// @Failure 500 {object} V1ErrorResponse
-func SearchProvidersMovieHandler(c *gin.Context) {
+func getProvidersQueryMovie(c *gin.Context) (*providers.ProvidersQueryRequest, error) {
 	_, sourceID, err := getSourceIDFromParams(c.Param("id"))
 	if err != nil {
-		internal.ErrorResponse(c, fmt.Errorf("failed to get source id from params: %w: %w", internal.BadRequestError, err))
-		return
+		return nil, fmt.Errorf("failed to get source id from params: %w: %w", internal.BadRequestError, err)
 	}
 	movie, err := sources.GetMovieFromIDTMDB(sourceID)
-	if err != nil {
-		internal.ErrorResponse(c, fmt.Errorf("failed to get movie from tmdb: %w", err))
-		return
+	if err != nil || movie == nil {
+		return nil, fmt.Errorf("failed to get movie from tmdb: %w", err)
 	}
 	// slightly hacky, revise if we add more types
 	requestType := c.Query("request_type")
@@ -158,17 +257,11 @@ func SearchProvidersMovieHandler(c *gin.Context) {
 	if providerQuery != "" {
 		temp, err := strconv.Atoi(c.Query("provider_profile_id"))
 		if err != nil {
-			internal.ErrorResponse(c, fmt.Errorf("invalid provider profile id query param: %w: %w", internal.BadRequestError, err))
-			return
+			return nil, fmt.Errorf("invalid provider profile id query param: %w: %w", internal.BadRequestError, err)
 		}
 		query.ProviderProfileID = &temp
 	} else {
 		query.ProviderProfileID = nil
 	}
-	results, err := providers.QueryProviders(query)
-	if err != nil {
-		internal.ErrorResponse(c, fmt.Errorf("failed to query providers: %w", err))
-		return
-	}
-	internal.SuccessResponse(c, results, 200)
+	return &query, nil
 }
